package userinput;

option java_outer_classname="UserInput";


service UserInputService {
    rpc CreateUserInput (UserInputRequest) returns (ComputationResponse);
}
message UserInputRequest{
	optional int32 inputType=1;
	optional string inputFileName=2;
	optional int32 numberOfMatrices=3;
	optional int32 rows=4;
	optional int32 columns=5;
	optional int32 outputType=6;
	optional string outputFileName=7;
	optional int32 outputOrCompute=8;
	
}

message ComputationResponse{
	optional ComputeResultStatus result=1;
	optional string error_message=2;

}


 enum ComputeResultStatus {
    SUCCESS=1;
    INVALID_REQUEST=2;
    FAILURE=3;
    }

